renamed classes, added extra client

--- a/LD1/simplerpc/Furnace/Furnace.csproj
+++ b/LD1/simplerpc/Furnace/Furnace.csproj
@@ -11,6 +11,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\TrafficLightContract\TrafficLightContract.csproj"/>
+		<ProjectReference Include="..\FurnaceContract\FurnaceContract.csproj"/>
 	</ItemGroup>
 </Project>
