--- a/LD1/simplerpc/Heater/Heater.csproj
+++ b/LD1/simplerpc/Heater/Heater.csproj
@@ -13,6 +13,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\TrafficLightContract\TrafficLightContract.csproj"/>
+		<ProjectReference Include="..\FurnaceContract\FurnaceContract.csproj"/>
 	</ItemGroup>
 </Project>
