--- a/LD1/simplerpc/.vscode/launch.json
+++ b/LD1/simplerpc/.vscode/launch.json
@@ -2,24 +2,35 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "TrafficLight",
+            "name": "Furnace",
             "type": "coreclr",
             "request": "launch",           
-            "preLaunchTask": "build-TrafficLight",
-            "program": "${workspaceFolder}/TrafficLight/bin/Debug/net8.0/TrafficLight.dll",
+            "preLaunchTask": "build-Furnace",
+            "program": "${workspaceFolder}/Furnace/bin/Debug/net8.0/Furnace.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/TrafficLight",
+            "cwd": "${workspaceFolder}/Furnace",
             "console": "externalTerminal",
             "stopAtEntry": false
         },
         {
-            "name": "Car",
+            "name": "Heater",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-Car",
-            "program": "${workspaceFolder}/Car/bin/Debug/net8.0/Car.dll",
+            "preLaunchTask": "build-Heater",
+            "program": "${workspaceFolder}/Heater/bin/Debug/net8.0/Heater.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/Car",
+            "cwd": "${workspaceFolder}/Heater",
+            "console": "externalTerminal",
+            "stopAtEntry": false
+        },
+        {
+            "name": "Loader",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build-Loader",
+            "program": "${workspaceFolder}/Loader/bin/Debug/net8.0/Loader.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Loader",
             "console": "externalTerminal",
             "stopAtEntry": false
         }
