--- a/LD1/simplerpc/.vscode/tasks.json
+++ b/LD1/simplerpc/.vscode/tasks.json
@@ -2,24 +2,36 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build-TrafficLight",
+            "label": "build-Furnace",
             "command": "dotnet",
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/TrafficLight/TrafficLight.csproj",
+                "${workspaceFolder}/Furnace/Furnace.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
             "problemMatcher": "$msCompile"
         },
         {
-            "label": "build-Car",
+            "label": "build-Heater",
             "command": "dotnet",
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/Car/Car.csproj",
+                "${workspaceFolder}/Heater/Heater.csproj",
+                "/property:GenerateFullPaths=true",
+                "/consoleloggerparameters:NoSummary"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "build-Loader",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "build",
+                "${workspaceFolder}/Loader/Loader.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
