--- a/LD2/grpc/Furnace/appsettings.json
+++ b/LD2/grpc/Furnace/appsettings.json
@@ -3,9 +3,13 @@
 		"LogLevel": {
 			"Default": "Information",
 			"Microsoft": "Warning",
-			"Microsoft.Hosting.Lifetime": "Information",
-			"Microsoft.AspNetCore.Hosting.Diagnostics": "Warning"
+			"Microsoft.Hosting.Lifetime": "Information"
 		}
 	},
-	"AllowedHosts": "*"
+	"AllowedHosts": "*",
+	"Kestrel": {
+		"EndpointDefaults": {
+			"Protocols": "Http2"
+		}
+	}
 }
