--- a/LD2/grpc/Heater/Heater.csproj
+++ b/LD2/grpc/Heater/Heater.csproj
@@ -1,18 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
-		<OutputType>Exe</OutputType>
-		<TargetFramework>net8.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<PackageReference Include="NLog" Version="5.3.3"/>
-		<PackageReference Include="SimpleRpc" Version="1.0.0-beta1"/>
-		<PackageReference Include="SimpleRpc.Serialization.Hyperion" Version="1.0.0-beta1"/>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0"/>
-	</ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\FurnaceContract\FurnaceContract.csproj"/>
-	</ItemGroup>
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net8.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+  </PropertyGroup>
+  <ItemGroup>
+    <Protobuf Include="Protos\service.proto" GrpcServices="client" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.66.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.66.0" />
+    <PackageReference Include="NLog" Version="5.3.4" />
+  </ItemGroup>
 </Project>
