added simplerpc to grpc adapter

--- a/LD4/simplerpc/.vscode/launch.json
+++ b/LD4/simplerpc/.vscode/launch.json
@@ -2,13 +2,24 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Furnace",
+            "name": "Furnace-gRPC",
             "type": "coreclr",
             "request": "launch",           
-            "preLaunchTask": "build-Furnace",
-            "program": "${workspaceFolder}/Furnace/bin/Debug/net8.0/Furnace.dll",
+            "preLaunchTask": "build-Furnace-gRPC",
+            "program": "${workspaceFolder}/Furnace-gRPC/bin/Debug/net8.0/Furnace.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/Furnace",
+            "cwd": "${workspaceFolder}/Furnace-gRPC",
+            "console": "externalTerminal",
+            "stopAtEntry": false
+        },
+        {
+            "name": "Adapter-gRPC",
+            "type": "coreclr",
+            "request": "launch",           
+            "preLaunchTask": "build-Adapter-gRPC",
+            "program": "${workspaceFolder}/Adapter-gRPC/bin/Debug/net8.0/Adapter-gRPC.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Adapter-gRPC",
             "console": "externalTerminal",
             "stopAtEntry": false
         },
