--- a/LD4/simplerpc/Adapter-gRPC/Adapter.csproj
+++ b/LD4/simplerpc/Adapter-gRPC/Adapter.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
-		<RootNamespace>Adapter_gRPC</RootNamespace>
+		<RootNamespace>Adapter</RootNamespace>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
